<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DeckChangeActivity">
    <TextView
        android:id="@+id/deck_title_label"
        android:text="@string/deck_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrier2"
        app:layout_constraintRight_toLeftOf="@id/deck_change_input"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Spinner
        android:id="@+id/deck_change_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/deck_title_label"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/barrier2"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="deck_add_label, deck_new_input"/>
    <TextView
        android:id="@+id/deck_add_label"
        android:text="@string/deck_new_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:textSize="28sp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".9"
        app:layout_constraintTop_toTopOf="@id/barrier2"
        app:layout_constraintBottom_toTopOf="@id/deck_new_input"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <EditText
        android:id="@+id/deck_new_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:hint="@string/deck_label"
        android:inputType="text"
        android:textSize="28sp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".7"
        app:layout_constraintTop_toBottomOf="@id/deck_add_label"
        app:layout_constraintBottom_toTopOf="@id/barrier1"
        app:layout_constraintRight_toLeftOf="@id/add_new_deck_button"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/add_new_deck_button"
        android:text="@string/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/barrier1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/deck_new_input"
        android:background="@drawable/basic_action_button"/>
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="cancel_button, save_deck_change_button"/>
    <Button
        android:id="@+id/save_deck_change_button"
        android:text="@string/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel_button"
        android:background="@drawable/basic_action_button"/>
    <Button
        android:id="@+id/cancel_button"
        android:text="@string/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@id/save_deck_change_button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/basic_action_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>