<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/translate_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/recycler_view"/>
    <EditText
        android:id="@+id/translated_text"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/translate_text"
        app:layout_constraintRight_toLeftOf="@id/recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/translate_button"
        android:text="@string/translate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/translated_text"
        app:layout_constraintRight_toLeftOf="@id/add_card_button"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/add_card_button"
        android:text="@string/add_card_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/translated_text"
        app:layout_constraintRight_toLeftOf="@id/recycler_view"
        app:layout_constraintLeft_toRightOf="@id/translate_button"/>
    <Button
        android:id="@+id/save_cards_button"
        android:text="@string/save_cards_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintTop_toBottomOf="@id/translate_button"
        app:layout_constraintRight_toLeftOf="@id/recycler_view"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintLeft_toRightOf="@id/translate_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        android:layout_width="200dp"
        android:layout_height="match_parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>